# inkdesk

./: .gitignore  CLAUDE.md  README.md
server/: Dockerfile  README.md  pom.xml  pyproject.toml  服务端说明.md
server/inkdesk_server/: __init__.py  agents.py  compile_worker.py  db.py  deposit_service.py  embeddings.py  evaluation_service.py  health_history_service.py  health_rules.py  health_service.py  importers.py  main.py  mcp_server.py  mcp_services.py  models.py  research.py  retrieval.py  run_service.py  schemas.py  security.py  time_utils.py  vault.py  vault_assets.py
server/inkdesk_server/core/: config.py
server/inkdesk_server/mcp/: README.md  __init__.py
server/inkvault_server/: __init__.py  agents.py  db.py  embeddings.py  importers.py  main.py  models.py  research.py  retrieval.py  schemas.py  security.py  vault.py
server/inkvault_server/core/: config.py
server/src/main/resources/: application-local.yml  application-local.yml.example  application.yml
server/src/main/resources/db/migration/: V1__initial_schema.sql  V2__plans_read_model.sql  (+6 more)
server/src/test/resources/: application-test.yml
server/src/test/resources/testdata/: cleanup.sql  knowledge-fixtures.sql  owner-without-settings.sql  partial-plans.sql  plans-fixtures.sql
server/tests/: conftest.py  test_agent_runtime.py  test_auth_api.py  test_compile_pipeline.py  test_db_schema_upgrade.py  test_deposit_api.py  test_health.py  test_health_api.py  test_health_deep_rules.py  test_mcp_tools.py  test_pgvector_integration.py  test_research_api.py  test_run_api.py  test_vault_service.py
(+358 files in other folders)
