[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inkdesk-server"
version = "0.1.0"
description = "Inkdesk Python main backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-multipart>=0.0.9,<1.0",
  "httpx>=0.27,<1.0",
  "beautifulsoup4>=4.12,<5.0",
  "pypdf>=5.0,<6.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "langgraph>=0.2,<1.0",
  "langchain-openai>=0.2,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0"
]

[tool.setuptools.packages.find]
include = ["inkdesk_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
